--- a/src/index.css
+++ b/src/index.css
@@ -93,3 +93,20 @@ nav {
 	background-size: cover;
 	background-repeat: no-repeat;
 }
+
+::-webkit-scrollbar {
+	width: 10px;
+}
+
+::-webkit-scrollbar-track {
+	border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+	background: rgb(132, 132, 132);
+	border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background: rgb(85, 85, 85);
+}
