--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
 
 * {
 	margin: 0;
@@ -43,6 +43,21 @@ body {
 	--dark-three: #283d3b;
 	--dark-onyx: #2e3532;
 	--dark-accent: #2ba84a;
+}
+
+@layer components {
+	.center {
+		@apply flex justify-center items-center;
+	}
+	.wh {
+		@apply w-full h-screen;
+	}
+	.maxW {
+		@apply max-w-[1200px] m-auto;
+	}
+	.bb {
+		@apply border border-black;
+	}
 }
 
 .container {
