fe: fevicon and othe fixed

--- a/src/index.css
+++ b/src/index.css
@@ -192,7 +192,13 @@ nav {
 }
 
 @layer base {
-  :root {
+	:root {
 		--radius: 0.5rem;
 	}
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
 }
